--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -160,3 +160,10 @@ align-items: baseline;
     }
 
 }
+
+/* .footer_parent_upper{
+    background-color: #06112a;
+}
+.footer_parent_lower{
+    background-color: #050d21;
+} */
