--- a/src/Components/Agents/Agents.css
+++ b/src/Components/Agents/Agents.css
@@ -88,9 +88,15 @@
     object-position: top center;
     overflow: hidden;
 }
+.agents .agents_pictures .agents_pic .agent_image img:hover{
+    filter: brightness(0.7);
+    transform: scale(1.2);
+    transition: .5s ease;
+}
 .agents .agents_pictures .agents_pic .agent_image .agent_image_div{
     width: 100%;
     height: 300px;
+    overflow: hidden;
 }
 /* .agents .agents_pictures .agents_pic .agent_image img:hover{
     transform: scale(1.1);
